--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/list_color">
-
-
-    <Button
-        android:id="@+id/search_button"
-        style="@style/search_button" />
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/list"
         style="@style/list"
-        android:layout_below="@id/search_button" />
-
-
+        />
     <TextView
         android:id="@+id/empty_view"
         style="@style/empty_text"
         android:textAppearance="?android:textAppearanceLarge" />
-
 
     <ProgressBar
         android:id="@+id/progressBar"
