--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,8 +4,6 @@
     <dimen name="vertical_margin">4dp</dimen>
     <dimen name="item_margin">8dp</dimen>
     <dimen name="title_text_size">20sp</dimen>
-    <dimen name="author_text_size">16sp</dimen>
+    <dimen name="section_text_size">16sp</dimen>
     <dimen name="divider_height">0.5dp</dimen>
-    <dimen name="image_height">80dp</dimen>
-    <dimen name="image_width">80dp</dimen>
 </resources>
